Update win drivers. Using libusbK v3.1.0.0